[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["Kei Nakayama <kei.of.nakayama@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
