[tool.poetry]
name = "sqlite3"
version = "0.1.0"
description = ""
authors = ["Kei Nakayama <nakayama@chiba-data.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.9"
pysqlite3 = "^0.4.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
